# router-biscuit-plugin

./: .gitleaks.toml  CODEOWNERS  Cargo.toml  LICENSE  README.md  attenuated_token.bc  authorizer.datalog  compose.sh  introspect.sh  orga.graphql  router.yaml  subgraph.bc  supergraph.graphql  supergraph.yml  token.bc  user.graphql
orga/: Cargo.toml
orga/src/: main.rs
src/plugins/: biscuit.rs  mod.rs
user/: Cargo.toml
user/src/: main.rs
xtask/: Cargo.toml
