# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "biscuit-router-plugin"
version = "0.1.0"
edition = "2021"
license = "LicenseRef-ELv2"

[workspace]
members = [
    "xtask",
]

[[bin]]
name = "router"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.58"
apollo-compiler = "0.2.0"
apollo-router = "1.0.0"
async-trait = "0.1.52"
biscuit-auth = { git = "https://github.com/biscuit-auth/biscuit-rust", version = "3.0.0-alpha2", branch = "check-all" }
futures = "0.3.21"
hex = "0.4.3"
http = "0.2.8"
schemars = "0.8.10"
serde = "1.0.136"
serde_json = "1.0.79"
tokio = { version = "1.17.0", features = ["full"] }
tower = { version = "0.4.12", features = ["full"] }
tracing = "=0.1.34"
